# miscai

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/miscai/: dlm.py  llm.py  stt.py  tools.py  tts.py  vad.py  wakeword.py
